--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,39 +1,132 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  /* background-color: #242424; */
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Colors */
+  --primary-clr: 220, 107, 25;
 }
 
-.login-page {
-  max-height: 100vh;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  height: 100vh;
+}
+
+.login-page,
+.register-page {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-form--container,
 .register-form--container {
   margin: 0 auto;
-  max-width: 20rem;
+  max-width: 30rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
-.login-form--input,
-.register-form--input {
+.register-form--container,
+.login-form--container {
+  background: white;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  width: 28rem;
+}
+
+.register-form--heading,
+.login-form--heading {
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.register-form {
+  width: 100%;
+}
+
+.register-form button,
+.login-form button {
+  margin: 10px 0 5px 0;
+  width: 100%;
+  padding: 0.6rem;
+  background-color: rgba(var(--primary-clr), 1);
+  color: white;
+  border: 1px solid;
+  border-radius: 10px;
+  text-transform: uppercase;
+  font-weight: 600;
+  transition: background-color 0.2s ease;
+}
+
+.register-form button:hover,
+.login-form button:hover {
+  cursor: pointer;
+  background-color: rgba(var(--primary-clr), 0.8);
+}
+.register-form button:disabled,
+.login-form button:disabled {
+  cursor: not-allowed;
+}
+.register-form button:active,
+.login-form button:active {
+  background-color: rgba(var(--primary-clr), 1);
+}
+
+.form-input {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: left;
   margin: 1rem 0;
+  font-size: 14px;
 }
 
-.login-form input,
-.register-form input {
-  margin-left: 1rem;
+.form-input label {
+  text-align: left;
+  font-size: 13px;
+  margin-bottom: 3px;
+}
+
+.form-input input {
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid gray;
+  outline: none;
+  width: 100%;
+  font-size: 13px;
+}
+
+.form-input span {
+  color: red;
+  font-size: 0.8rem;
+  padding: 0 3px;
+  display: none;
+}
+
+/* Conditionally change styles based on focused property */
+.form-input input:invalid[focused="true"] ~ span {
+  display: block;
+}
+
+.form-input input:invalid[focused="true"] {
+  border: 1px solid red;
 }
