--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 :root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -7,7 +7,11 @@
   -moz-osx-font-smoothing: grayscale;
 
   /* Colors */
-  --primary-clr: 220, 107, 25;
+  --accent-clr: 220, 107, 25;
+  --body-text-clr: 0, 0, 0;
+
+  /* Fonts */
+  --anton: "Anton";
 }
 
 *,
@@ -24,6 +28,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color: #f5f5f5;
   height: 100vh;
 }
 
@@ -37,7 +42,6 @@ body {
 
 .login-form--container,
 .register-form--container {
-  margin: 0 auto;
   max-width: 30rem;
   display: flex;
   flex-direction: column;
@@ -70,7 +74,7 @@ body {
   margin: 10px 0 5px 0;
   width: 100%;
   padding: 0.6rem;
-  background-color: rgba(var(--primary-clr), 1);
+  background-color: rgba(var(--accent-clr), 1);
   color: white;
   border: 1px solid;
   border-radius: 10px;
@@ -82,7 +86,7 @@ body {
 .register-form button:hover,
 .login-form button:hover {
   cursor: pointer;
-  background-color: rgba(var(--primary-clr), 0.8);
+  background-color: rgba(var(--accent-clr), 0.8);
 }
 .register-form button:disabled,
 .login-form button:disabled {
@@ -90,7 +94,7 @@ body {
 }
 .register-form button:active,
 .login-form button:active {
-  background-color: rgba(var(--primary-clr), 1);
+  background-color: rgba(var(--accent-clr), 1);
 }
 
 .form-input {
@@ -130,4 +134,73 @@ body {
 
 .form-input input:invalid[focused="true"] {
   border: 1px solid red;
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
+  width: 100%;
+}
+
+.navbar {
+  padding: 0 30px;
+  display: flex;
+  height: 60px;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+
+  box-shadow: 2px 10px 16px -8px rgba(0, 0, 0, 0.38);
+  -webkit-box-shadow: 2px 10px 16px -8px rgba(0, 0, 0, 0.38);
+  -moz-box-shadow: 2px 10px 16px -8px rgba(0, 0, 0, 0.38);
+}
+
+.navbar-title {
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.navbar-links {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.navbar-challenges {
+  text-decoration: none;
+  color: black;
+}
+
+.navbar-profile {
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  background: rgb(var(--accent-clr));
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  border: none;
+  color: white;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.landing-page {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.landing-page--headings h1 {
+  font-family: var(--anton);
+  font-weight: 800;
+  font-size: 3rem;
+  width: 20ch;
+}
+.landing-page--headings span {
+  color: rgb(var(--accent-clr));
+}
+
+.landing-page--headings h3 {
+  margin-top: 1.2rem;
+  color: rgba(var(--body-text-clr), 0.65);
 }
