--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -174,7 +174,7 @@ body {
   color: black;
 }
 
-.navbar-profile {
+.navbar-user-profile {
   /* display: flex; */
   /* align-items: center; */
   /* justify-content: center; */
