--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -158,6 +158,11 @@ body {
   -moz-box-shadow: 2px 10px 16px -8px rgba(0, 0, 0, 0.38);
 }
 
+.navbar a {
+  color: black;
+  text-decoration: none;
+}
+
 .navbar-title {
   font-weight: 700;
   font-size: 1.2rem;
@@ -169,15 +174,7 @@ body {
   gap: 1rem;
 }
 
-.navbar-challenges {
-  text-decoration: none;
-  color: black;
-}
-
 .navbar-user-profile {
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: center; */
   background: rgb(var(--accent-clr));
   border-radius: 100%;
   width: 40px;
@@ -207,6 +204,60 @@ body {
   background-color: rgba(var(--accent-clr), 1);
 }
 
+.navbar svg {
+  fill: black;
+}
+
+#sidebar-active {
+  display: none;
+}
+
+.open-sidebar-button,
+.close-sidebar-button {
+
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .navbar-links {
+    flex-direction: column;
+    align-items: flex-start;
+
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 10;
+    width: 300px;
+    height: 100%;
+    padding: 20px;
+
+
+    background-color: white;
+    box-shadow: -5px 0 5px rgba(0, 0, 0, 0.24);
+    -webkit-box-shadow: -5px 0 5px rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: -5px 0 5px rgba(0, 0, 0, 0.24);
+
+    transition: 0.75s ease-out;
+  }
+
+  .open-sidebar-button,
+  .close-sidebar-button {
+    display: block;
+  }
+
+  #sidebar-active:checked~.navbar-links {
+    right: 0;
+  }
+
+  #sidebar-active:checked~#overlay {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9;
+  }
+}
 
 .landing-page {
   height: 100vh;
