--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,257 +30,6 @@
 body {
   font-family: "Poppins", sans-serif;
   background-color: #f5f5f5;
-  height: 100vh;
-}
-
-.login-page,
-.register-page {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.login-form--container,
-.register-form--container {
-  max-width: 30rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.register-form--container,
-.login-form--container {
-  background: white;
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  width: 28rem;
-}
-
-.register-form--heading,
-.login-form--heading {
-  font-size: 1.4rem;
-  font-weight: bold;
-}
-
-.register-form,
-.login-form {
-  width: 100%;
-}
-
-.register-form button,
-.login-form button {
-  margin: 10px 0 5px 0;
-  width: 100%;
-  padding: 0.6rem;
-  background-color: rgba(var(--accent-clr), 1);
-  color: white;
-  border: 1px solid;
-  border-radius: 10px;
-  text-transform: uppercase;
-  font-weight: 600;
-  transition: background-color 0.2s ease;
-}
-
-.register-form button:hover,
-.login-form button:hover {
-  cursor: pointer;
-  background-color: rgba(var(--accent-clr), 0.8);
-}
-
-.register-form button:disabled,
-.login-form button:disabled {
-  cursor: not-allowed;
-}
-
-.register-form button:active,
-.login-form button:active {
-  background-color: rgba(var(--accent-clr), 1);
-}
-
-.form-input {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  margin: 1rem 0;
-  font-size: 14px;
-}
-
-.form-input label {
-  text-align: left;
-  font-size: 13px;
-  margin-bottom: 3px;
-}
-
-.form-input input {
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px solid gray;
-  outline: none;
-  width: 100%;
-  font-size: 13px;
-}
-
-.form-input span {
-  color: red;
-  font-size: 0.8rem;
-  padding: 0 3px;
-  display: none;
-}
-
-/* Conditionally change styles based on focused property */
-.form-input input:invalid[focused="true"]~span {
-  display: block;
-}
-
-.form-input input:invalid[focused="true"] {
-  border: 1px solid red;
-}
-
-.sticky {
-  position: sticky;
-  top: 0;
-  width: 100%;
-}
-
-.navbar {
-  padding: 0 30px;
-  display: flex;
-  height: 60px;
-  align-items: center;
-  justify-content: space-between;
-  background-color: white;
-
-  box-shadow: 2px 10px 16px -8px rgba(0, 0, 0, 0.38);
-  -webkit-box-shadow: 2px 10px 16px -8px rgba(0, 0, 0, 0.38);
-  -moz-box-shadow: 2px 10px 16px -8px rgba(0, 0, 0, 0.38);
-}
-
-.navbar a {
-  color: black;
-  text-decoration: none;
-}
-
-.navbar-title {
-  font-weight: 700;
-  font-size: 1.2rem;
-}
-
-.navbar-links {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.navbar-user-profile {
-  background: rgb(var(--accent-clr));
-  border-radius: 100%;
-  width: 40px;
-  height: 40px;
-  border: none;
-  color: white;
-  font-weight: 700;
-  font-size: 1.2rem;
-}
-
-.navbar-login {
-  text-decoration: none;
-  border-radius: 10px;
-  background-color: rgba(var(--accent-clr), 0.8);
-  color: white;
-  border: none;
-  padding: 5px 10px;
-  cursor: pointer;
-  transition: background-color 0.2s ease;
-}
-
-.navbar-login:hover {
-  background-color: rgba(var(--accent-clr), 0.8);
-}
-
-.navbar-login:active {
-  background-color: rgba(var(--accent-clr), 1);
-}
-
-.navbar-profile {
-  display: none;
-}
-
-.navbar svg {
-  fill: black;
-}
-
-#sidebar-active {
-  display: none;
-}
-
-.open-sidebar-button,
-.close-sidebar-button {
-  display: none;
-}
-
-@media (max-width: 768px) {
-  .navbar-links {
-    flex-direction: column;
-    align-items: flex-start;
-
-    position: fixed;
-    top: 0;
-    right: -100%;
-    z-index: 10;
-    width: 300px;
-    height: 100%;
-    padding: 20px;
-
-
-    background-color: white;
-    box-shadow: -5px 0 5px rgba(0, 0, 0, 0.24);
-    -webkit-box-shadow: -5px 0 5px rgba(0, 0, 0, 0.24);
-    -moz-box-shadow: -5px 0 5px rgba(0, 0, 0, 0.24);
-
-    transition: 0.75s ease-out;
-  }
-
-  .open-sidebar-button,
-  .close-sidebar-button {
-    display: block;
-  }
-
-  .navbar-profile {
-    display: block;
-  }
-
-  .navbar-user-profile {
-    display: none;
-  }
-
-  #sidebar-active:checked~.navbar-links {
-    right: 0;
-  }
-
-  #sidebar-active:checked~#overlay {
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9;
-  }
-}
-
-
-
-.mobile-hidden {
-  display: none;
-}
-
-.landing-page {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
 }
 
 .landing-page--headings h1 {
@@ -288,13 +37,79 @@ body {
   font-weight: 800;
   font-size: 3rem;
   width: 20ch;
+  text-align: center;
 }
 
 .landing-page--headings span {
   color: rgb(var(--accent-clr));
 }
 
-.landing-page--headings h3 {
-  margin-top: 1.2rem;
-  color: rgba(var(--body-text-clr), 0.65);
+
+@media only screen and (max-width: 600px) {
+  .landing-page {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-items: center;
+    gap: 3rem;
+    margin: 4rem 0;
+    margin-inline: 2rem;
+  }
+
+  .landing-page--headings h1 {
+    font-size: 2.5rem;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+
+  .landing-page {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-items: center;
+    gap: 3rem;
+    margin: 4rem 0;
+    margin-inline: 1rem;
+  }
+
+  .landing-page--headings h1 {
+    font-size: 2.8rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .landing-page {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-items: center;
+    gap: 3rem;
+    margin: 4rem 0;
+    margin-inline: 1rem;
+  }
+
+  .landing-page--headings h1 {
+    font-size: 2.8rem;
+
+  }
+}
+
+
+@media only screen and (min-width: 992px) {
+  .landing-page {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .landing-page--headings h1 {
+    font-size: 3rem;
+    text-align: left;
+    margin-left: 2rem;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .landing-page--headings h1 {
+    font-size: 4rem;
+  }
 }
