--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,6 +44,11 @@ body {
   color: rgb(var(--accent-clr));
 }
 
+.challenges-page {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
 
 @media only screen and (max-width: 600px) {
   .landing-page {
