refactor user data into context, render challengeItem data, register functionality

--- a/frontend/src/components/challenge-components/challenges.css
+++ b/frontend/src/components/challenge-components/challenges.css
@@ -13,6 +13,8 @@
   text-align: left;
 }
 
+.challenges-details {}
+
 @media only screen and (max-width: 600px) {
   .challenges-page--title {
     font-size: 1.2rem;
