--- a/frontend/src/components/form-components/form.css
+++ b/frontend/src/components/form-components/form.css
@@ -4,9 +4,9 @@
   flex-direction: row;
 }
 
-.login-form--container,
-.register-form--container,
-.create-challenge-form--container {
+.login-form-container,
+.register-form-container,
+.create-challenge-form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,8 +17,8 @@
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.register-form--heading,
-.login-form--heading {
+.register-form__heading,
+.login-form__heading {
   font-size: 1.4rem;
   font-weight: bold;
 }
@@ -29,35 +29,6 @@
   width: 100%;
 }
 
-.register-form button,
-.login-form button {
-  margin: 10px 0 5px 0;
-  width: 100%;
-  padding: 0.6rem;
-  background-color: rgba(var(--accent-clr), 1);
-  color: white;
-  border: 1px solid;
-  border-radius: 10px;
-  text-transform: uppercase;
-  font-weight: 600;
-  transition: background-color 0.2s ease;
-}
-
-.register-form button:hover,
-.login-form button:hover {
-  cursor: pointer;
-  background-color: rgba(var(--accent-clr), 0.8);
-}
-
-.register-form button:disabled,
-.login-form button:disabled {
-  cursor: not-allowed;
-}
-
-.register-form button:active,
-.login-form button:active {
-  background-color: rgba(var(--accent-clr), 1);
-}
 
 .create-challenge-form label {
   text-align: left;
@@ -65,6 +36,10 @@
   margin-bottom: 3px;
 }
 
+.login-form__button,
+.register-form__button {
+  width: 100%;
+}
 
 
 
@@ -120,8 +95,8 @@ textarea {
 
 @media only screen and (max-width: 600px) {
 
-  .login-form--container,
-  .register-form--container {
+  .login-form-container,
+  .register-form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -135,8 +110,8 @@ textarea {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
 
-  .register-form--heading,
-  .login-form--heading {
+  .register-form__heading,
+  .login-form__heading {
     font-size: 1.4rem;
     font-weight: bold;
   }
@@ -145,9 +120,9 @@ textarea {
 
 @media only screen and (min-width: 600px) {
 
-  .login-form--container,
-  .register-form--container,
-  .create-challenge-form--container {
+  .login-form-container,
+  .register-form-container,
+  .create-challenge-form-container {
     width: 100%;
     max-width: 500px;
   }
