register and link project, display leaderboard

--- a/frontend/src/components/challenge-components/challenges.css
+++ b/frontend/src/components/challenge-components/challenges.css
@@ -11,7 +11,8 @@
   gap: 2rem;
 }
 
-.challenge-item {
+.challenge-item,
+.submission-item {
   background: white;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -26,26 +27,25 @@
   font-size: 1.5rem;
 }
 
-.challenge-item__title {
+.challenge-item__title,
+.submission-item__title {
   font-size: 1.2rem;
   font-weight: 600;
 }
 
 .challenge-item__description {
   color: rgb(var(--sub-text-clr));
+  padding: 1rem 0;
 }
-
-.challenge-item__dates {}
 
 .button.challenge-item__button {
   width: 100%;
 }
 
 /* Challenge Details */
-.challenge-details__page {
+.challenge-details-page {
   display: grid;
   justify-items: center;
-  margin-inline: 160px;
   padding: 2rem 0;
 }
 
@@ -61,6 +61,7 @@
   align-items: center;
   justify-content: space-between;
   padding-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 .challenge-details__dates {
@@ -70,7 +71,88 @@
 .challenge-details__name {
   font-weight: 700;
   font-size: 1.2rem;
+  margin-right: 20px;
 }
+
+/* Submission Leaderboard */
+.no-submissions {
+  font-weight: 800;
+  font-size: 1.2rem;
+}
+
+.submission-leaderboard {
+  display: grid;
+  margin-top: 2rem;
+  padding: 1.5rem 2rem;
+  border-radius: 10px;
+  width: 100%;
+  background-color: rgb(var(--light-gray-bg-clr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 2rem;
+}
+
+.submission-item {
+  background-color: white;
+
+
+}
+
+/* Link Project Modal */
+.link-project-modal,
+.link-project-modal__overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+}
+
+.link-project-modal__overlay {
+  background: rgba(var(--sub-text-clr), 0.5);
+}
+
+.link-project-modal__content {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 1.5rem 2rem;
+  border-radius: 10px;
+  max-width: 600px;
+  min-width: 300px;
+}
+
+.link-project-modal__title {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.link-project-modal__input {
+  outline: none;
+  padding: 0.5rem;
+  border-radius: 10px;
+  border: 1px solid gray;
+}
+
+.link-project-modal__button-group {
+  display: flex;
+}
+
+.link-project-modal__close {
+  margin: 10px 10px 5px;
+  padding: 0.6rem;
+  border-radius: 10px;
+  border: 2px solid rgb(var(--accent-clr));
+  color: rgb(var(--accent-clr));
+  background-color: white;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+
 
 /* Mobile */
 @media only screen and (max-width: 600px) {
@@ -78,16 +160,20 @@
     font-size: 1.2rem;
   }
 
-  .challenges-page {
+  .challenges-page,
+  .challenge-details-page {
     margin-inline: 16px;
   }
+
 }
 
 /*Mobile to Tablet*/
 /* @media only screen and (min-width: 600px) {} */
 
 @media only screen and (min-width: 600px) {
-  .challenges-page {
+
+  .challenges-page,
+  .challenge-details-page {
     margin-inline: 32px;
   }
 }
@@ -103,7 +189,8 @@
 /* Desktops */
 @media only screen and (min-width: 1200px) {
 
-  .challenges-page {
+  .challenges-page,
+  .challenge-details-page {
 
     margin-inline: 160px;
   }
