--- a/frontend/src/components/challenge-components/challenges.css
+++ b/frontend/src/components/challenge-components/challenges.css
@@ -80,9 +80,19 @@
   font-size: 1.2rem;
 }
 
+.submission-leaderboard-container {
+  width: 100%;
+  margin-top: 2rem;
+}
+
+.submission-leaderboard__heading {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
 .submission-leaderboard {
   display: grid;
-  margin-top: 2rem;
   padding: 1.5rem 2rem;
   border-radius: 10px;
   width: 100%;
@@ -121,13 +131,19 @@
   background: white;
   padding: 1.5rem 2rem;
   border-radius: 10px;
-  max-width: 600px;
-  min-width: 300px;
+  width: 500px;
 }
 
 .link-project-modal__title {
   font-size: 1.2rem;
   font-weight: 700;
+  margin-bottom: 1em;
+}
+
+.link-project-modal__input-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
 }
 
 .link-project-modal__input {
